tests/src/frontend/syntax/invalid/duplicate_positional_parameter.sk
fun f(p: Int, p: String): void {
  p
}

fun main(): void {
  print_raw("Fail")
}
